# finestray

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Finestray.cppcheck  LICENSE.txt  NOTICE  PRIVACY.md  README.md  TODO.md  UpdateVersion.ps1  analysis.props  argh.cmake  build-all.bat  build_all.bat  cJSON.cmake  cJSON.patch  ninja-clang-build.bat  ninja-msvc-build.bat  ninja_build.bat  release-checklist.md  release-checklist.txt  test.ahk  vstudio-build.bat  vstudio-clang-build.bat  vstudio-msvc-build.bat  vstudio_build.bat
.github/workflows/: build-analyze.yml  build-debug.yml  build-release.yml  publish-winget.yml
icon/: convert-icon.bat
manifests/b/Benbuck/Finestray/0.2.0.0/: Benbuck.Finestray.installer.yaml  Benbuck.Finestray.locale.en-US.yaml  Benbuck.Finestray.yaml
manifests/b/Benbuck/Finestray/0.3.0.0/: Benbuck.Finestray.installer.yaml
src/: AboutDialog.cpp  AboutDialog.h  AppInfo.h  AppName.h  Bitmap.cpp  Bitmap.h  BitmapHandleWrapper.h  BitmapWrapper.h  BrushHandleWrapper.h  CJsonWrapper.h  COMLibraryWrapper.h  CommandLine.cpp  CommandLine.h  ContextMenu.cpp  ContextMenu.h  DebugPrint.cpp  DebugPrint.h  DeviceContextHandleWrapper.h  ErrorContext.h  File.cpp  File.h  Finestray.cpp  Finestray.h  Finestray.rc  HandleWrapper.h  Helpers.cpp  Helpers.h  Hotkey.cpp  Hotkey.h  IconHandleWrapper.h  Log.cpp  Log.h  MenuHandleWrapper.h  MenuWrapper.h  MinTray.cpp  MinTray.h  MinTray.rc  MinimizePersistence.cpp  MinimizePersistence.h  MinimizePlacement.cpp  (+34 more)
src/icon/: convert-icon.bat
src/images/: generate.bat
